--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "next": "^14.2.15",
+    "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.14",
-    "postcss": "^8.4.49",
+    "@next/eslint-config-next": "^15.0.3",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.15"
+    "eslint": "^9.14.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14"
   }
 }
