--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@next/eslint-config-next": "^15.0.3",
+    "eslint-config-next": "^15.0.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "postcss": "^8.4.49",
